# advent-of-code

./: .gitignore  README.org
2015/01/typescript/: exercise.md  main.ts
2017/day1/haskell/: main.hs
2017/day2/haskell/: main.hs
2017/day3/haskell/: main.hs
2018/day1/haskell/: main.hs
2018/day1/shell/: main.sh
2018/day2/haskell/: main.hs
2018/day3/haskell/: main.hs
2018/day4/haskell/: main.hs
2020/01/: solve.py
2020/02/: solve.py
2020/03/: solve.py
2020/04/: Solve.fsx
2022/01/: dune-project  shell.nix
2022/01/lib/: dune  elf.ml  elf.mli  lexer.mll  parser.mly
2022/01/part1/: dune  main.ml
2022/01/part2/: dune  main.ml
2022/01/test/: dune
2022/02/lib/: dune  lexer.mll  parser.mly  strategy.ml
2022/02/part1/: dune  main.ml
2022/02/part2/: dune  main.ml
2022/03/: dune-project
2022/03/lib/: dune  lexer.mll  parser.mly  reading.ml  (+1 more)
2022/05/: shell.nix
2022/06/: dune-project  twentytwoday06.opam
2022/07/: dune-project  twentytwoday07.opam
2022/08/: dune-project  twentytwoday08.opam
2022/08/lib/: domain.ml  domain.mli  dune  lexer.mll  log.ml  parser.mly  reading.ml  tokens.mly
2024/01/: aoc_2024_01.opam  default.nix  dune-project  flake.nix
2024/02/: aoc_2024_02.opam  default.nix  dune-project  flake.nix
2024/03/: aoc_2024_03.opam  default.nix  dune-project  flake.nix
2024/03/lib/: dune  lexer.ml  parser.mly  program.ml  program.mli  reading.ml  reading.mli
2024/04/: aoc_2024_04.opam  default.nix  dune-project  flake.nix
2024/05/: aoc_2024_05.opam  default.nix  dune-project  flake.nix
2024/05/lib/: dune  lexer.ml  parser.mly  printer_queue.ml  printer_queue.mli  reading.mli  testing.ml  testing.mli
2024/06/: aoc_2024_06.opam  default.nix  dune-project  flake.nix
langs/: haskell.org
(+67 files in other folders)
